[package]
name = "sni-router"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/sni-router"
description = "SNI router"
keywords = ["web", "sni", "https"]

[dependencies]
anyhow = "1.0.102"
caps = "0.5.6"
clap = { version = "4.6.1", features = ["derive"] }
ipnet = "2.12.0"
ktls = "6.0.2"
landlock = "0.4.4"
libc = "0.2.186"
nix = { version = "0.31.3", features = ["fs", "socket", "uio", "user"] }
prometheus = { version = "0.14.0", features = ["process", "push"] }
prost = "0.14.3"
prost-reflect = { version = "0.16.3", features = ["text-format"] }
regex = "1.12.3"
ring = "0.17.14"
rustls = { version = "0.23.40", features = ["prefer-post-quantum"] }
rustls-native-certs = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = "0.6.3"
stderrlog = "0.6.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "time", "signal"] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = [ "sync", "process"] }

[build-dependencies]
prost-build = "0.14.1"
